namespace ChessGame.Enumerations;

public enum ColorType
{
    Black,
    White
}
