namespace ChessGame.Enumerations;

public enum PieceState
{
    Active,
    Captured,
    Promoted
}