namespace ChessGame.Enumerations;

public enum PieceType
{
    Pawn,
    Rook,
    Bishop,
    Queen,
    King,
    Knight
}